force-app/main/default/objects/CM_Supply_Relationship__c/CM_Supply_Relationship__c.object-meta.xml
<CustomObject>
    <description>Manual supply-chain edges used by CM Supply Network Graph.</description>
    <label>CM Supply Relationship</label>
    <nameField>
        <displayFormat>CMR-{000000}</displayFormat>
        <label>Relationship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CM Supply Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>