force-app/main/default/objects/CM_Supply_Relationship__c/fields/Is_User_Curated__c.field-meta.xml
<CustomField>
    <fullName>Is_User_Curated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is User Curated</label>
    <type>Checkbox</type>
</CustomField>