force-app/main/default/objects/CM_Supply_Relationship__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Products</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>