force-app/main/default/objects/CM_Supply_Relationship__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <defaultValue>'INFERRED'</defaultValue>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PUBLIC_INFO</fullName>
            </value>
            <value>
                <fullName>INFERRED</fullName>
                <default>true</default>
                <label>INFERRED</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>