force-app/main/default/objects/CM_Supply_Relationship__c/fields/Supply_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Supply_Scenario__c</fullName>
    <defaultValue>&apos;LEGACY_UNSCOPED&apos;</defaultValue>
    <label>Supply Scenario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FWA_5G</fullName>
                <label>5G FWA</label>
            </value>
            <value>
                <fullName>ENTERPRISE_WIFI_AP</fullName>
                <label>Enterprise Wi-Fi AP</label>
            </value>
            <value>
                <fullName>AUTOMOTIVE_TELEMATICS</fullName>
                <label>Automotive Telematics</label>
            </value>
            <value>
                <fullName>LEGACY_UNSCOPED</fullName>
                <default>true</default>
                <label>Legacy / Unscoped</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>