force-app/main/default/objects/CM_Supply_Relationship__c/validationRules/CM_Source_Target_Must_Differ.validationRule-meta.xml
<ValidationRule>
    <fullName>CM_Source_Target_Must_Differ</fullName>
    <active>true</active>
    <description>Prevent self-loop edges in manual relationship records.</description>
    <errorConditionFormula>Source_Account__c = Target_Account__c</errorConditionFormula>
    <errorDisplayField>Target_Account__c</errorDisplayField>
    <errorMessage>Source Account and Target Account must be different.</errorMessage>
</ValidationRule>